--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated transcripts: 22\n",
+      "Number of annotated transcripts: 25\n",
       "Annotated Transcripts:\n",
       " - transcript_1.txt\n",
       " - transcript_10.txt\n",
@@ -49,7 +49,10 @@
       " - transcript_88.txt\n",
       " - transcript_99.txt\n",
       " - transcript_100.txt\n",
+      " - transcript_101.txt\n",
+      " - transcript_102.txt\n",
       " - transcript_103.txt\n",
+      " - transcript_104.txt\n",
       " - transcript_114.txt\n"
      ]
     }
@@ -74,6 +77,12 @@
     "\n",
     "    # Cleanup\n",
     "    file.close()\n",
+    "\n",
+    "import random as rand\n",
+    "# Cutting training data for evaluation purposes:\n",
+    "numTranscriptsRemoved = 0\n",
+    "for i in range(numTranscriptsRemoved):\n",
+    "    completedTranscripts.pop(rand.randint(0, len(completedTranscripts) - 1))\n",
     "\n",
     "# List of annotated transcripts\n",
     "print(\"Number of annotated transcripts:\", len(completedTranscripts))\n",
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
